@@ -483,6 +483,11 @@ works on a real ST should work also in Hatari</b>.</p>
       <td>Mouse moved too slowly before Hatari 1.7</td>
     </tr>
     <tr>
+      <td><a href="http://www.atarimania.com/game-atari-st-teller-_10593.html">The Teller</a></td>
+      <td>1.8.1</td>
+      <td>Does not work with cartridge / HD emulation</td>
+    </tr>
+    <tr>
       <td>The Ultimate Ride</td>
       <td>&nbsp;</td>
       <td>The game has a bug and will crash if drive B is empty. Either disable drive B or insert
