@@ -75,6 +75,8 @@
 /* 2014/04/11	[NP]	Add refill_prefetch for i_Move Dn,(An) (International 3D Tennis)		*/
 /* 2014/08/15	[NP]	Cancel change from 2008/04/26, sz_byte for Areg is not valid for MOVE,		*/
 /*			'move.b a1,(a0)' should give an illegal exception				*/
+/* 2012/05/05	[NP]	In i_JMP, in case of address error with jmp xxx.w, last_addr_for_exception_3	*/
+/*			should be pc+2 (The Teller, 'jmp $201.w')					*/
 
 
 const char GenCpu_fileid[] = "Hatari gencpu.c : " __DATE__ " " __TIME__;
@@ -1597,7 +1599,10 @@ static void gen_opcode (unsigned long int opcode)
 	genamode (curi->smode, "srcreg", curi->size, "src", 0, 0);
 	if (using_exception_3) {
 	    printf ("\tif (srca & 1) {\n");
-	    printf ("\t\tlast_addr_for_exception_3 = m68k_getpc() + %d;\n" , m68k_pc_offset);	// [NP] last_addr is not pc+6
+	    if ( opcode == 0x4ef8 )									// [NP] jmp xxx.w
+		printf ("\t\tlast_addr_for_exception_3 = m68k_getpc() + 2;\n");				// [NP] last_addr is pc+2
+	    else
+		printf ("\t\tlast_addr_for_exception_3 = m68k_getpc() + %d;\n" , m68k_pc_offset);	// [NP] last_addr is not pc+6
 	    printf ("\t\tlast_fault_for_exception_3 = srca;\n");
 	    printf ("\t\tlast_instructionaccess_for_exception_3 = 1;\n");
 	    printf ("\t\tlast_op_for_exception_3 = opcode; Exception(3,0,M68000_EXC_SRC_CPU); goto %s;\n", endlabelstr);
